# webzio-task

./: README.md  pyproject.toml  scrape_forums.py
webzio_scraper/: base.py  browser.py  foreternia.py
