[tool.poetry]
name = "webzio-scraper"
version = "0.1.0"
description = ""
authors = ["Bentsi Magidovich <magidovich@gmail.com>"]
readme = "README.md"
packages = [{include = "webzio_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
